temp.txt
./serv_files/SOAP/bbsort.c:32:5: error: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Werror,-Wimplicit-function-declaration]
    printf("%d  ", array[i]);
    ^
./serv_files/SOAP/bbsort.c:32:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
./serv_files/SOAP/bbsort.c:39:3: error: use of undeclared identifier 'clock_t'
  clock_t start, end;
  ^
./serv_files/SOAP/bbsort.c:45:3: error: use of undeclared identifier 'start'
  start = clock();
  ^
./serv_files/SOAP/bbsort.c:45:11: error: implicit declaration of function 'clock' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
  start = clock();
          ^
./serv_files/SOAP/bbsort.c:47:3: error: use of undeclared identifier 'end'
  end = clock();
  ^
./serv_files/SOAP/bbsort.c:48:30: error: use of undeclared identifier 'end'
  cpu_time_used = ((double) (end - start)) / CLOCKS_PER_SEC;
                             ^
./serv_files/SOAP/bbsort.c:48:36: error: use of undeclared identifier 'start'
  cpu_time_used = ((double) (end - start)) / CLOCKS_PER_SEC;
                                   ^
./serv_files/SOAP/bbsort.c:48:46: error: use of undeclared identifier 'CLOCKS_PER_SEC'
  cpu_time_used = ((double) (end - start)) / CLOCKS_PER_SEC;
                                             ^
8 errors generated.
